--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,33 @@
-sudo: false
 language: node_js
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+env:
+  global:
+  - CXX=g++-4.8
+  - REDIS_SENTINEL_JQ='127.0.0.1:26379'
+  - REDIS_SENTINEL_NAME_JQ='jobqueue01'
+  - REDIS_SENTINEL_SEED='127.0.0.1:26378'
+  - REDIS_SENTINEL_NAME_SEED='seed01'
 cache:
   directories:
     - node_modules
-notifications:
-  email: false
 node_js:
-  - "4"
+  - "4.2"
+before_script:
+  - redis-server /etc/redis/redis.conf --port 6379
+  - bash ./setupSentinel.sh
+  - npm prune
 install:
   - npm install
-before_script:
-  - npm prune
 script:
   - npm test
 branches:
   only:
     - master
     - dev
+notifications:
+  email: false
