--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ node_js:
   - "4.2"
 before_script:
   - redis-server /etc/redis/redis.conf --port 6379
-  - bash ./setupSentinel.sh
+  - bash ./deploy/setupSentinel.sh
   - npm prune
 install:
   - npm install
