--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kue-jm",
-  "version": "0.0.2-alpha.3",
-  "description": "a manager tool for handling job sequentially in Kue.js",
+  "version": "0.0.3",
+  "description": "a job manager tool for handling sub jobs sequentially in Kue.js",
   "main": "index.js",
   "directories": {
     "example": "example",
@@ -26,6 +26,7 @@
     "sinon": "^1.17.6"
   },
   "scripts": {
+    "pretest": "eslint .",
     "test": "mocha"
   },
   "keywords": [
