--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,8 @@
   },
   "rules": {
     "curly": [
-      "error",
-      "multi"
+      "warn",
+      "all"
     ],
     "no-underscore-dangle": "off",
     "no-shadow": "off",
