--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ioredis": "^2.3.0",
     "kue": "^0.11.1",
     "lodash": "^4.15.0",
-    "node-uuid": "^1.4.7"
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "delay": "^1.3.1",
